# verbot

./: .env  .gitignore  Dockerfile.dev  docker-compose.yaml  pyproject.toml  settings.toml
migrations/: env.py
migrations/versions/: 5c9b78d23093_initial.py  65d342879345_added_chat_and_message.py
verbot/: app.py  config.py  db.py  default.toml
verbot/models/: __init__.py  base.py  chat.py  message.py  user.py
verbot/routes/: chat.py
